Banana Watch: remove "after the fact" duplicate mod ID check
There already is an alert sent off "during the fact".